hw8/css/winery.css
body {
    width: 100%;
}

header {
    height: 20px;
    padding-bottom: 15px;
    padding-top: 15px;
}

.h1-class {
    float: left;
    text-transform: uppercase;
    font-family: 'Roboto Slab', serif;
    font-size: 25px;
    color: dimgray;
}

.nav {
    float: right;
    margin-top: 12px;
    font-family: sans-serif;
    color: dimgray;
}

.nav a {
    text-decoration: none;
    margin-left: 15px;
    color: dimgray;
}

#winery-uva {
    background-image: url(../img/wine-bg.jpg);
    background-repeat: no-repeat;
    color: black;
    height: 100%;
    width: 100%;
}

.uva-text {
    align-content: center;
    margin-bottom: 200px;
}

.uva-h1 {
    text-align: center;
    padding-top: 300px;
    color: white;
    font-size: 40px;
}

.uva h2 {
    font-size: 16px;
    color: white;
    padding-top: 200px;
    text-align: center;
    padding-top: 10px;
}

.uva p {
    color: white;
    text-align: center;
    margin-top: 5px;
    font-style: italic;
    font-size: 18px;
}


/* END HERO SPLASH SECTION*/


/*BEGING Old Man Section*/

#old-dude {
    height: 420px;
}

.left-box {
    height: 300px;
    width: 60%;
}

.man {
    width: 30%;
    padding-right: 100px;
}

.left-box h3 {
    color: grey;
    font-size: 10px;
    text-align: center;
    margin-top: 200px;
}

.left-box h4 {
    color: black;
    font-size: 15px;
    margin-left: 100px;
    font-size: 15px;
}

.left-box p {
    font-size: 10px;
    color: grey;
    text-align: center;
    margin-left: 45px;
}

.left-box {
    width: 578px;
    height: 866px;
    float: left;
}

.man img {
    width: 40%;
    height: 420px;
}

.man {
    width: 40%;
    height: 420px;
    float: right;
}


/*END OLD MAN Section*/


/*BEGIN small splash section*/

#sixty-five {
    background-image: url(../img/wine13.jpg);
    height: 500px;
    background-repeat: no-repeat;
}

#sixty-five h2 {
    text-align: center;
    font-family: 'roboto slab';
    color: white;
    padding-top: 300px;
    margin-right: 500px;
    font-size: 20px;
}

#sixty-five p {
    text-align: center;
    font-family: sans-serif;
    font-size: 10px;
    color: white;
}


/*END small splash section*/


/*BEGIN 3 BOTTLES Section*/

#three-wines {
    text-align: center;
}

#three-wines h1 {
    font-family: cursive;
    font-size: 18px;
    font-style: italic;
}

#three-wines p {
    font-size: 12px;
    font-family: sans-serif;
}

#three-wines a {
    font-family: monospace;
    font-size: 12px;
    color: white;
    border: solid 5px green;
    background: green;
}

.shiraz {
    height: 400px;
    width: 33%;
    float: left;
}

.shiraz img {
    height: 320px;
    margin-left: 3px;
    0
}

.clear-fix:after {
    content: '';
    display: none;
    clear: both;
    */
}

.char {
    height: 400px;
    width: 33%;
    float: left;
}

.char img {
    height: 320px;
}

.merlot {
    height: 400px;
    /*border: solid 2px red;*/
    width: 33%;
    float: left;
}

.merlot img {
    height: 320px;
}

height: 320px;
border: solid 2px white;
width: 33%;
float: right;
margin-top: auto;

}
.char img {
    height: 252px;
    width: 100px;
}

